src/objects/slmt__Sales_Meeting_Item_Configuration__mdt.object
<CustomObject>
    <description>Custom metadata to store the sales meeting item configuration</description>
    <fields>
        <fullName>slmt__detail_class_name__c</fullName>
        <description>Name of the apex class that implements the Sales_Meeting_Item_Details_Itf interface to obtain the information to display in the card</description>
        <inlineHelpText>Name of the apex class that implements the Sales_Meeting_Item_Details_Itf interface to obtain the information to display in the card</inlineHelpText>
        <label>Item Details Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slmt__item_component_attributes__c</fullName>
        <description>JSON file with the attributes required to dispaly the Item Component</description>
        <inlineHelpText>JSON file with the attributes required to dispaly the Item Component</inlineHelpText>
        <label>Item Component Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slmt__item_component_name__c</fullName>
        <description>Name of the component to be displayed when the item is selected</description>
        <inlineHelpText>Name of the component to be displayed when the item is selected</inlineHelpText>
        <label>Item Component Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slmt__sales_meeting_config_id__c</fullName>
        <description>Relation with the sales meeting configuration</description>
        <inlineHelpText>Relation with the sales meeting configuration</inlineHelpText>
        <label>Sales meeting configuration</label>
        <referenceTo>slmt__Sales_Meeting_Configuration__mdt</referenceTo>
        <relationshipLabel>Sales Meeting Item Configurations</relationshipLabel>
        <relationshipName>Sales_Meeting_Item_Configurations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>slmt__sales_meeting_item_id__c</fullName>
        <description>Unique identifier of the sales meeting configuration</description>
        <inlineHelpText>Unique identifier of the sales meeting configuration</inlineHelpText>
        <label>Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Meeting Item Configuration</label>
    <pluralLabel>Sales Meeting Item Configurations</pluralLabel>
</CustomObject>